# crabtyper

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: azure-static-web-apps-kind-dune-0d99afd03.yml  azure-static-web-apps-wonderful-desert-06f1b7f03.yml  deploy.yml  linter.yml  main_crabtyper-api.yml  publish-api.yml  publish-web.yml
api/: .env  Cargo.toml  Dockerfile  snippets.db
api/migrations/2022-01-29-182008_create_db/: down.sql  up.sql
api/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
ci/: build.sh
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs
crates/parser/: data.txt
crates/parser/src/: main.rs
crates/web/: Cargo.toml  tailwind.config.js
crates/web/src/: components.rs  constant.rs  state.rs
crates/web/src/components/: app.rs  buffer.rs  command_line.rs  cursor.rs  footer.rs  game.rs  header.rs  linenumber.rs  result_view.rs  statusline.rs  vim.rs  window.rs
crates/web/src/utils/: calculate.rs  char_width_reader.rs  mod.rs
parser/: data.json  data.txt  output.txt
web/: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  build.txt  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: app.rs  components.rs  constant.rs  external.rs  main.rs  state.rs
web/src/components/: app.rs  buffer.rs  footer.rs  game.rs  header.rs  linenumber.rs  mod.rs  pagelayout.rs  result.rs  statusline.rs  vim.rs  window.rs
web/src/context/: gamestate_ctx.rs  mod.rs
web/src/styles/: tailwind.css
web/src/utils/: calculate.rs
web/static/: index.html
web/static/css/: onedark.css
