[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8"
failure = "0.1.8"
futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { verison = "0.8", features= ["serde", "v4"]}

[dev-dependencies]
actix-rt = "1"
