[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.3.3"
actix-cors = "0.5.4"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
