[package]
name = "crabtyper-web"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.23"
strum_macros = "0.23"
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
gloo = "0.6.0"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git", rev = "8ba6af21f" }
reqwasm = "0.4.0"
wasm-bindgen-futures = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
