[package]
name = "crabtyper-web"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = "0.3.57"
gloo = "0.7.0"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
html-escape = "0.2.11"
