[package]
name = "crabtyper-api"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
dotenv = "0.15.0"
actix-web = "4"
actix-cors = "0.6.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.0"
